// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPickerModal displays \`loading...\` message if data not loaded 1`] = `
<div
  className="loading-message"
>
  Loading...
</div>
`;

exports[`ColorPickerModal displays \`no matches\` with 0 items 1`] = `
<div
  className="no-results"
>
  No matches.
</div>
`;

exports[`ColorPickerModal displays 2 items 1`] = `
<div
  className="suggested-colors"
>
  <div
    className="suggested-color"
    onClick={[Function]}
  >
    <div
      className="color-preview"
      style={
        Object {
          "backgroundColor": "#undefined",
        }
      }
    />
  </div>
  <div
    className="suggested-color"
    onClick={[Function]}
  >
    <div
      className="color-preview"
      style={
        Object {
          "backgroundColor": "#undefined",
        }
      }
    />
  </div>
</div>
`;

exports[`ColorPickerModal returns null if !isModalVisible 1`] = `null`;
